# swagger/swagger.json
@@ -9,6 +9,28 @@
     "basePath": "/api/v1",
     "paths": null,
     "definitions": {
+        "models.CreateExpenseRequest": {
+            "title": "CreateExpenseRequest",
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "expense_date": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "models.LoginRequest": {
             "title": "LoginRequest",
             "type": "object",
@@ -47,6 +69,28 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateExpenseRequest": {
+            "title": "UpdateExpenseRequest",
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "expense_date": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
